--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = mongodb+srv://PriyanshMinda:priyansh123@cluster0.33ag2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT = 3000;
